[tool.poetry]
name = "fastapi-admin-panel"
version = "0.1.0"
description = ""
authors = ["mkbeh"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.14.0"
pydantic = "^1.8.2"
email-validator = "^1.1.3"
SQLAlchemy = "^1.4.19"
fastapi = "^0.65.2"
itsdangerous = "^2.0.1"
python-multipart = "^0.0.5"
sentry-sdk = "^1.1.0"
python-jose = "^3.3.0"
aiohttp = "^3.7.4"
passlib = "^1.7.4"
asyncpg = "^0.23.0"
tenacity = "^7.0.0"
watchgod = "^0.7"
python-dotenv = "^0.18.0"
ujson = "^4.0.2"
httpx = "^0.18.2"
aiogoogle = "^1.1.14"
Jinja2 = "^3.0.1"
brotlicffi = "^1.0.9"
pytest = "^6.2.4"
bcrypt = "^3.2.0"
aioredis = "^1.3.1"
aiocache = "^0.11.1"
msgpack = "^1.0.2"

[tool.poetry.dev-dependencies]
isort = "^5.9.1"
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.910"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^2.12.1"
types-six = "^0.1.7"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
